# perturbopy

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  conftest.py  do_tests.py  pyproject.toml  run_tests.py  setup.cfg  setup.py  test.py
.github/workflows/: flake8-lint.yml  pytest-ppy.yml
docs/: README.rst  documentation.rst  requirements.txt
docs/perturbo_docs/: .gitignore  f90tools.py  files_description.yml  htmltools.py  input_parameters.py  interactive_workflow.py
docs/source/: api.rst  conf.py  index.rst  input_generation.rst  modules.rst  perturbopy.generate_input.rst  perturbopy.io_utils.rst  perturbopy.postproc.calc_modes.rst  perturbopy.postproc.dbs.rst  perturbopy.postproc.rst  perturbopy.postproc.utils.rst  perturbopy.rst  perturbopy.test_utils.compare_data.rst  perturbopy.test_utils.rst  perturbopy.test_utils.run_test.rst  perturbopy.testing_code.rst  postprocessing.rst  testsuite.rst  tutorials.rst  usage.rst
tests/: .gitignore  conftest.py  epwan_info.yml  setup_tests.py  test_bands_calc_mode.py  test_constants.py  test_dummy_yaml.py  test_env.py  test_ephmat_calc_mode.py  test_ephmat_spin_calc_mode.py  test_epwan-bands.py  test_epwan-setup.py  test_imsigma_calc_mode.py  test_imsigma_spin_calc_mode.py  test_lattice.py  test_perturbo.py  test_phdisp_calc_mode.py  test_plot_tools.py  test_recip_pt_dbs.py  test_spectral_cum.py  test_spins_calc_mode.py  test_trans_calc_mode.py
tests_f90/: ephr_comp_info.yml  epr_info.yml  test_perturbo.py
tests_ppy/: test_constants.py  test_lattice.py  test_recip_pt_dbs.py  test_recip_pts_dbs.py
(+687 files in other folders)
